- fixed wrong behaviour of GRID alignment for some themes; excluded for MOBILE and WINPHONE themes

--- a/styles/main.less
+++ b/styles/main.less
@@ -471,6 +471,24 @@ body {
 .group {
    display: inline-block;
    font-size: 0;
+   vertical-align: middle;
+   margin: @groupMargin;
+   position: relative;
+
+   &-title {
+      font-size: 19px;
+      height: 35px;
+      position: relative;
+      top: -35px;
+      color: #fff;
+      font-weight: 300;
+      opacity: 0.8;
+   }
+}
+
+.group-row {
+   display: inline-block;
+   font-size: 0;
    vertical-align: top;
    margin: @groupMargin;
    position: relative;
