--- a/styles/themes.less
+++ b/styles/themes.less
@@ -365,10 +365,6 @@
     line-height: 40px;
   }
 
-  .groups-table-row {
-       padding-top: 40px;
-  }
-
   .page {
     white-space: normal;
 
@@ -543,10 +539,6 @@
     font-weight: bold;
     opacity: 1;
     font-size: 17px;
-  }
-
-  .groups-table-row {
-    padding-top: 40px;
   }
 
   .weather-list table tr:nth-child(2n) {
